k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: strip-api
  namespace: lanchonete


spec:

  stripPrefix:

    prefixes:

    - /api
